mule-user-guide/v/3.3/multicast-transport-reference.adoc
= 多播传输参考

http://en.wikipedia.org/wiki/Multicast[组播]传输器发送和接收来自多播套接字组的消息。它在 link:/mule-user-guide/v/3.3/udp-transport-reference[UDP]之上实现，并且具有高度可扩展性，因为不需要知道接收者。

== 传输信息

[%header,cols="10,9,9,9,9,9,9,9,9,9,9"]
|===
一个|
运输

 为|
文件

 为|
入站

 为|
出站

 为|
请求

 为|
交易

 为|
流

 为|
重试

 为|
欧洲议会议员

 为|
默认MEP

 为|
Maven神器

|组播 | http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/multicast/package-summary.html[JavaDoc SchemaDoc]  | image:check.png[查]  | image:check.png[查]  | image:check.png[查] {{9}请求 - 响应 |请求 - 响应 | org.mule.transport：mule-transport-multicast}  |   -   |   -  {{
|===

 
*Legend*

*Transport*  - 交通工具的名称/协议+
  *Docs*  - 链接到transport +的JavaDoc和SchemaDoc
  *Inbound*  - 传输是否可以接收入站事件并可用于入站端点+
  *Outbound*  - 传输是否可以生成出站事件并与出站端点+一起使用
  *Request*  - 此端点是否可以通过请求调用直接查询（通过MuleClient或EventContext）+
  *Transactions*  - 交易是否受交通工具支持。支持事务的传输可以在本地或分布式两阶段提交（XA）事务中进行配置。 +
  *Streaming*  - 此传输是否可以处理输入流中传入的消息。这可以非常有效地处理大数据。有关更多信息，请参阅流式传输。 +
  *Retry*  - 此传输是否支持重试策略。请注意，所有传输都可以配置Retry策略，但只有在这里标记的传输才能被MuleSoft +官方支持
  *MEPs*  - 此传输+支持的消息交换模式
  *Default MEP*  - 使用此传输的端点的默认MEP不会明确配置MEP +
  *Maven Artifact*  - 组名称为 http://maven.apache.org/[Maven的]中此传输的工件名称


== 命名空间和语法

XML名称空间：

[source, xml]
----
xmlns:multicast="http://www.mulesoft.org/schema/mule/multicast"
----

XML架构位置：

[source, xml]
----
http://www.mulesoft.org/schema/mule/multicast http://www.mulesoft.org/schema/mule/multicast/3.3/mule-multicast.xsd
----

连接器语法：

[source, xml, linenums]
----
<multicast:connector name="mcConnector" receiveBufferSize="1024" sendBufferSize="1024"
               timeout="0" keepSendSocketOpen="false" broadcast="false"
               timeToLive="127" loopback="true'/>
----
+
端点语法：
+
你可以用两种不同的方式定义你的端点：
+
. 前缀端点：
+
[source, xml]
----
<multicast:inbound-endpoint host="localhost" port="65433"/>
----
+
. 没有前缀的URI：
+
[source, xml]
----
<inbound-endpoint address="multicast://localhost:65433"/>
----

有关更多信息，请参阅下面的部分。

== 注意事项

IP多播是由IP（互联网协议层）提供的服务，允许一对多通信。 IP多播最常见的用途是将UDP数据报发送到位于不同系统上的多个套接字。 Mule支持多播传输。请注意，除了多对一而不是一对一的通信外，组播传输与 link:/mule-user-guide/v/3.3/udp-transport-reference[UDP传输]非常相似，应该遵守相同的考虑事项。

如下面的例子所示，组播传输有两个目的：

* 将消息发送到一组IP套接字套接字
* 读取发送到一组IP套接字套接字的邮件

== 特点

多播模块允许Mule应用程序发送和接收IP多播数据报，并声明性地自定义IP多播的以下功能（在适用的情况下，每个功能的标准名称）：

* 发送或接收消息的超时时间（SO_TIMEOUT）。
* 是否允许发送广播消息（SO_BROADCAST）。
* 是否在发送消息后关闭套接字。
* 可以接收的最大邮件大小。
* 发送数据包的时间
* 是否将数据包循环回本地套接字

多播端点可以通过以下两种方式之一使用：

* 要接收IP多播数据报，请创建入站多播端点。
* 要发送IP多播数据报，请创建一个出站多播端点。

== 用法

使用多播端点

* 将MULE多播命名空间添加到您的配置：+
** 使用xmlns定义组播前缀：multicast = http://www.mulesoft.org/schema/mule/multicast“
** 使用http://www.mulesoft.org/schema/mule/multicast定义架构位置http://www.mulesoft.org/schema/mule/multicast/3.3/mule-multicast.xsd
* 为多播端点定义一个或多个连接器。 +
** 创建一个多播连接器：
+

[source, xml, linenums]
----
<multicast:connector name="multicastConnector"/>
----

* 创建多播端点。 +
将在入站端点收到** 数据报。数据报中的字节将成为消息负载。
** 数据报将被发送到出站端点。消息有效载荷中的字节将成为数据报。
** 这两种端点都由主机名和端口标识。在这种情况下，主机名是定义为 http://www.iana.org/assignments/multicast-addresses/multicast-addresses.xml[这里]的标准IP多播地址之一。将数据报发送到多播主机/端口组合时，订阅该主机/端口的所有套接字都会收到该消息。

多播端点始终是单向的。

== 示例配置

*Copy datagrams from one port to another in a flow*

[source, xml, linenums]
----
<multicast:connector name="connector"/> ❶
 
<flow name="copy">
    <multicast:inbound-endpoint host="224.0.0.0" port="4444" exchange-pattern="one-way"/> ❷
    <pass-through-router>
        <multicast:outbound-endpoint host="224.0.0.0" port="5555" exchange-pattern="one-way" /> ❸
    </pass-through-router>
</flow>
----

连接器❶使用所有默认属性。入站端点❷接收多播数据报并将它们复制到出站端点❸，这会将它们复制到不同的多播组。

== 配置选项

多播连接器属性

[%header,cols="34,33,33"]
|===
| {名称{1}}说明 |缺省
|广播 |将其设置为true，以允许发送广播端口 |为false
| keepSendSocketOpen  |是否在发送邮件后保持套接字打开 | false
| loopback  |是否将消息循环回发送它们的套接字 |为false
| receiveBufferSize  |这是可以接收的最大（以字节为单位）数据报的大小。 | 16 KB
| sendBufferSize  |网络发送缓冲区的大小 | 16 KB
|超时 |用于发送和接收 |系统默认值的超时
| timeToLive  |数据包保持活动状态的时间。这是介于1和225之间的数字 |系统默认值
|===

== 配置参考

=== 元素列表

== 多播传输

多播传输可以使用IP多播分派Mule事件。

== 连接器

== 入站端点

<inbound-endpoint...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|主机
|串
|无
|
|
|端口
|端口号
|无
|
|
|===

无<inbound-endpoint...>的子元素



== 出站端点

<outbound-endpoint...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|主机
|串
|无
|
|
|端口
|端口号
|无
|
|
|===

无<outbound-endpoint...>的子元素



== 端点

<endpoint...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|主机
|串
|无
|
|
|端口
|端口号
|无
|
|
|===

无<endpoint...>的子元素



== 架构

http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_multicast/namespace-overview.html[架构]

==  Javadoc API参考

这个模块的Javadoc可以在这里找到：

http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/multicast/package-summary.html[组播]

== 的Maven

多播模块可以包含以下依赖项：

[source, xml, linenums]
----
<dependency>
  <groupId>org.mule.transports</groupId>
  <artifactId>mule-transport-multicast</artifactId>
  <version>3.3.1</version>
</dependency>
----

== 注意事项

在Mule 3.1.1之前，有两个不同的属性用于在多播连接器`sendTimeout`和`receiveTimeout`上设置超时。有必要将它们设置为相同的值。现在只有`timeout`用于发送或接收。
